--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@neondatabase/serverless": "^0.9.0",
+    "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
@@ -36,6 +37,7 @@
     "eslint-config-next": "14.1.2",
     "postcss": "^8",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "sass": "^1.71.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   }
