--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-table": "^8.13.2",
     "@vercel/analytics": "^1.2.2",
     "@vercel/blob": "^0.22.1",
     "class-variance-authority": "^0.7.0",
