--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@neondatabase/serverless": "^0.9.0",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-table": "^8.13.2",
     "@vercel/analytics": "^1.2.2",
