--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.13.2",
     "@vercel/analytics": "^1.2.2",
     "@vercel/blob": "^0.22.1",
